// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text body: a: basic 1`] = `
<a
  className="typography typography_size-body typography_color-basic"
>
  body: a: basic
</a>
`;

exports[`Text body: a: brand 1`] = `
<a
  className="typography typography_size-body typography_color-brand"
>
  body: a: brand
</a>
`;

exports[`Text body: a: brand-1 1`] = `
<a
  className="typography typography_size-body typography_color-brand-1"
>
  body: a: brand-1
</a>
`;

exports[`Text body: a: disabled 1`] = `
<a
  className="typography typography_size-body typography_color-disabled"
>
  body: a: disabled
</a>
`;

exports[`Text body: a: error 1`] = `
<a
  className="typography typography_size-body typography_color-error"
>
  body: a: error
</a>
`;

exports[`Text body: a: headers 1`] = `
<a
  className="typography typography_size-body typography_color-headers"
>
  body: a: headers
</a>
`;

exports[`Text body: a: inherit 1`] = `
<a
  className="typography typography_size-body typography_color-inherit"
>
  body: a: inherit
</a>
`;

exports[`Text body: a: inverse 1`] = `
<a
  className="typography typography_size-body typography_color-inverse"
>
  body: a: inverse
</a>
`;

exports[`Text body: a: link 1`] = `
<a
  className="typography typography_size-body typography_color-link"
>
  body: a: link
</a>
`;

exports[`Text body: a: secondary 1`] = `
<a
  className="typography typography_size-body typography_color-secondary"
>
  body: a: secondary
</a>
`;

exports[`Text body: a: success 1`] = `
<a
  className="typography typography_size-body typography_color-success"
>
  body: a: success
</a>
`;

exports[`Text body: a: warning 1`] = `
<a
  className="typography typography_size-body typography_color-warning"
>
  body: a: warning
</a>
`;

exports[`Text body: b: basic 1`] = `
<b
  className="typography typography_size-body typography_color-basic"
>
  body: b: basic
</b>
`;

exports[`Text body: b: brand 1`] = `
<b
  className="typography typography_size-body typography_color-brand"
>
  body: b: brand
</b>
`;

exports[`Text body: b: brand-1 1`] = `
<b
  className="typography typography_size-body typography_color-brand-1"
>
  body: b: brand-1
</b>
`;

exports[`Text body: b: disabled 1`] = `
<b
  className="typography typography_size-body typography_color-disabled"
>
  body: b: disabled
</b>
`;

exports[`Text body: b: error 1`] = `
<b
  className="typography typography_size-body typography_color-error"
>
  body: b: error
</b>
`;

exports[`Text body: b: headers 1`] = `
<b
  className="typography typography_size-body typography_color-headers"
>
  body: b: headers
</b>
`;

exports[`Text body: b: inherit 1`] = `
<b
  className="typography typography_size-body typography_color-inherit"
>
  body: b: inherit
</b>
`;

exports[`Text body: b: inverse 1`] = `
<b
  className="typography typography_size-body typography_color-inverse"
>
  body: b: inverse
</b>
`;

exports[`Text body: b: link 1`] = `
<b
  className="typography typography_size-body typography_color-link"
>
  body: b: link
</b>
`;

exports[`Text body: b: secondary 1`] = `
<b
  className="typography typography_size-body typography_color-secondary"
>
  body: b: secondary
</b>
`;

exports[`Text body: b: success 1`] = `
<b
  className="typography typography_size-body typography_color-success"
>
  body: b: success
</b>
`;

exports[`Text body: b: warning 1`] = `
<b
  className="typography typography_size-body typography_color-warning"
>
  body: b: warning
</b>
`;

exports[`Text body: em: basic 1`] = `
<em
  className="typography typography_size-body typography_color-basic"
>
  body: em: basic
</em>
`;

exports[`Text body: em: brand 1`] = `
<em
  className="typography typography_size-body typography_color-brand"
>
  body: em: brand
</em>
`;

exports[`Text body: em: brand-1 1`] = `
<em
  className="typography typography_size-body typography_color-brand-1"
>
  body: em: brand-1
</em>
`;

exports[`Text body: em: disabled 1`] = `
<em
  className="typography typography_size-body typography_color-disabled"
>
  body: em: disabled
</em>
`;

exports[`Text body: em: error 1`] = `
<em
  className="typography typography_size-body typography_color-error"
>
  body: em: error
</em>
`;

exports[`Text body: em: headers 1`] = `
<em
  className="typography typography_size-body typography_color-headers"
>
  body: em: headers
</em>
`;

exports[`Text body: em: inherit 1`] = `
<em
  className="typography typography_size-body typography_color-inherit"
>
  body: em: inherit
</em>
`;

exports[`Text body: em: inverse 1`] = `
<em
  className="typography typography_size-body typography_color-inverse"
>
  body: em: inverse
</em>
`;

exports[`Text body: em: link 1`] = `
<em
  className="typography typography_size-body typography_color-link"
>
  body: em: link
</em>
`;

exports[`Text body: em: secondary 1`] = `
<em
  className="typography typography_size-body typography_color-secondary"
>
  body: em: secondary
</em>
`;

exports[`Text body: em: success 1`] = `
<em
  className="typography typography_size-body typography_color-success"
>
  body: em: success
</em>
`;

exports[`Text body: em: warning 1`] = `
<em
  className="typography typography_size-body typography_color-warning"
>
  body: em: warning
</em>
`;

exports[`Text body: i: basic 1`] = `
<i
  className="typography typography_size-body typography_color-basic"
>
  body: i: basic
</i>
`;

exports[`Text body: i: brand 1`] = `
<i
  className="typography typography_size-body typography_color-brand"
>
  body: i: brand
</i>
`;

exports[`Text body: i: brand-1 1`] = `
<i
  className="typography typography_size-body typography_color-brand-1"
>
  body: i: brand-1
</i>
`;

exports[`Text body: i: disabled 1`] = `
<i
  className="typography typography_size-body typography_color-disabled"
>
  body: i: disabled
</i>
`;

exports[`Text body: i: error 1`] = `
<i
  className="typography typography_size-body typography_color-error"
>
  body: i: error
</i>
`;

exports[`Text body: i: headers 1`] = `
<i
  className="typography typography_size-body typography_color-headers"
>
  body: i: headers
</i>
`;

exports[`Text body: i: inherit 1`] = `
<i
  className="typography typography_size-body typography_color-inherit"
>
  body: i: inherit
</i>
`;

exports[`Text body: i: inverse 1`] = `
<i
  className="typography typography_size-body typography_color-inverse"
>
  body: i: inverse
</i>
`;

exports[`Text body: i: link 1`] = `
<i
  className="typography typography_size-body typography_color-link"
>
  body: i: link
</i>
`;

exports[`Text body: i: secondary 1`] = `
<i
  className="typography typography_size-body typography_color-secondary"
>
  body: i: secondary
</i>
`;

exports[`Text body: i: success 1`] = `
<i
  className="typography typography_size-body typography_color-success"
>
  body: i: success
</i>
`;

exports[`Text body: i: warning 1`] = `
<i
  className="typography typography_size-body typography_color-warning"
>
  body: i: warning
</i>
`;

exports[`Text body: p: basic 1`] = `
<p
  className="typography typography_size-body typography_color-basic"
>
  body: p: basic
</p>
`;

exports[`Text body: p: brand 1`] = `
<p
  className="typography typography_size-body typography_color-brand"
>
  body: p: brand
</p>
`;

exports[`Text body: p: brand-1 1`] = `
<p
  className="typography typography_size-body typography_color-brand-1"
>
  body: p: brand-1
</p>
`;

exports[`Text body: p: disabled 1`] = `
<p
  className="typography typography_size-body typography_color-disabled"
>
  body: p: disabled
</p>
`;

exports[`Text body: p: error 1`] = `
<p
  className="typography typography_size-body typography_color-error"
>
  body: p: error
</p>
`;

exports[`Text body: p: headers 1`] = `
<p
  className="typography typography_size-body typography_color-headers"
>
  body: p: headers
</p>
`;

exports[`Text body: p: inherit 1`] = `
<p
  className="typography typography_size-body typography_color-inherit"
>
  body: p: inherit
</p>
`;

exports[`Text body: p: inverse 1`] = `
<p
  className="typography typography_size-body typography_color-inverse"
>
  body: p: inverse
</p>
`;

exports[`Text body: p: link 1`] = `
<p
  className="typography typography_size-body typography_color-link"
>
  body: p: link
</p>
`;

exports[`Text body: p: secondary 1`] = `
<p
  className="typography typography_size-body typography_color-secondary"
>
  body: p: secondary
</p>
`;

exports[`Text body: p: success 1`] = `
<p
  className="typography typography_size-body typography_color-success"
>
  body: p: success
</p>
`;

exports[`Text body: p: warning 1`] = `
<p
  className="typography typography_size-body typography_color-warning"
>
  body: p: warning
</p>
`;

exports[`Text body: span: basic 1`] = `
<span
  className="typography typography_size-body typography_color-basic"
>
  body: span: basic
</span>
`;

exports[`Text body: span: brand 1`] = `
<span
  className="typography typography_size-body typography_color-brand"
>
  body: span: brand
</span>
`;

exports[`Text body: span: brand-1 1`] = `
<span
  className="typography typography_size-body typography_color-brand-1"
>
  body: span: brand-1
</span>
`;

exports[`Text body: span: disabled 1`] = `
<span
  className="typography typography_size-body typography_color-disabled"
>
  body: span: disabled
</span>
`;

exports[`Text body: span: error 1`] = `
<span
  className="typography typography_size-body typography_color-error"
>
  body: span: error
</span>
`;

exports[`Text body: span: headers 1`] = `
<span
  className="typography typography_size-body typography_color-headers"
>
  body: span: headers
</span>
`;

exports[`Text body: span: inherit 1`] = `
<span
  className="typography typography_size-body typography_color-inherit"
>
  body: span: inherit
</span>
`;

exports[`Text body: span: inverse 1`] = `
<span
  className="typography typography_size-body typography_color-inverse"
>
  body: span: inverse
</span>
`;

exports[`Text body: span: link 1`] = `
<span
  className="typography typography_size-body typography_color-link"
>
  body: span: link
</span>
`;

exports[`Text body: span: secondary 1`] = `
<span
  className="typography typography_size-body typography_color-secondary"
>
  body: span: secondary
</span>
`;

exports[`Text body: span: success 1`] = `
<span
  className="typography typography_size-body typography_color-success"
>
  body: span: success
</span>
`;

exports[`Text body: span: warning 1`] = `
<span
  className="typography typography_size-body typography_color-warning"
>
  body: span: warning
</span>
`;

exports[`Text body: strong: basic 1`] = `
<strong
  className="typography typography_size-body typography_color-basic"
>
  body: strong: basic
</strong>
`;

exports[`Text body: strong: brand 1`] = `
<strong
  className="typography typography_size-body typography_color-brand"
>
  body: strong: brand
</strong>
`;

exports[`Text body: strong: brand-1 1`] = `
<strong
  className="typography typography_size-body typography_color-brand-1"
>
  body: strong: brand-1
</strong>
`;

exports[`Text body: strong: disabled 1`] = `
<strong
  className="typography typography_size-body typography_color-disabled"
>
  body: strong: disabled
</strong>
`;

exports[`Text body: strong: error 1`] = `
<strong
  className="typography typography_size-body typography_color-error"
>
  body: strong: error
</strong>
`;

exports[`Text body: strong: headers 1`] = `
<strong
  className="typography typography_size-body typography_color-headers"
>
  body: strong: headers
</strong>
`;

exports[`Text body: strong: inherit 1`] = `
<strong
  className="typography typography_size-body typography_color-inherit"
>
  body: strong: inherit
</strong>
`;

exports[`Text body: strong: inverse 1`] = `
<strong
  className="typography typography_size-body typography_color-inverse"
>
  body: strong: inverse
</strong>
`;

exports[`Text body: strong: link 1`] = `
<strong
  className="typography typography_size-body typography_color-link"
>
  body: strong: link
</strong>
`;

exports[`Text body: strong: secondary 1`] = `
<strong
  className="typography typography_size-body typography_color-secondary"
>
  body: strong: secondary
</strong>
`;

exports[`Text body: strong: success 1`] = `
<strong
  className="typography typography_size-body typography_color-success"
>
  body: strong: success
</strong>
`;

exports[`Text body: strong: warning 1`] = `
<strong
  className="typography typography_size-body typography_color-warning"
>
  body: strong: warning
</strong>
`;

exports[`Text body-bold: a: basic 1`] = `
<a
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold: a: basic
</a>
`;

exports[`Text body-bold: a: brand 1`] = `
<a
  className="typography typography_size-body-bold typography_color-brand"
>
  body-bold: a: brand
</a>
`;

exports[`Text body-bold: a: brand-1 1`] = `
<a
  className="typography typography_size-body-bold typography_color-brand-1"
>
  body-bold: a: brand-1
</a>
`;

exports[`Text body-bold: a: disabled 1`] = `
<a
  className="typography typography_size-body-bold typography_color-disabled"
>
  body-bold: a: disabled
</a>
`;

exports[`Text body-bold: a: error 1`] = `
<a
  className="typography typography_size-body-bold typography_color-error"
>
  body-bold: a: error
</a>
`;

exports[`Text body-bold: a: headers 1`] = `
<a
  className="typography typography_size-body-bold typography_color-headers"
>
  body-bold: a: headers
</a>
`;

exports[`Text body-bold: a: inherit 1`] = `
<a
  className="typography typography_size-body-bold typography_color-inherit"
>
  body-bold: a: inherit
</a>
`;

exports[`Text body-bold: a: inverse 1`] = `
<a
  className="typography typography_size-body-bold typography_color-inverse"
>
  body-bold: a: inverse
</a>
`;

exports[`Text body-bold: a: link 1`] = `
<a
  className="typography typography_size-body-bold typography_color-link"
>
  body-bold: a: link
</a>
`;

exports[`Text body-bold: a: secondary 1`] = `
<a
  className="typography typography_size-body-bold typography_color-secondary"
>
  body-bold: a: secondary
</a>
`;

exports[`Text body-bold: a: success 1`] = `
<a
  className="typography typography_size-body-bold typography_color-success"
>
  body-bold: a: success
</a>
`;

exports[`Text body-bold: a: warning 1`] = `
<a
  className="typography typography_size-body-bold typography_color-warning"
>
  body-bold: a: warning
</a>
`;

exports[`Text body-bold: b: basic 1`] = `
<b
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold: b: basic
</b>
`;

exports[`Text body-bold: b: brand 1`] = `
<b
  className="typography typography_size-body-bold typography_color-brand"
>
  body-bold: b: brand
</b>
`;

exports[`Text body-bold: b: brand-1 1`] = `
<b
  className="typography typography_size-body-bold typography_color-brand-1"
>
  body-bold: b: brand-1
</b>
`;

exports[`Text body-bold: b: disabled 1`] = `
<b
  className="typography typography_size-body-bold typography_color-disabled"
>
  body-bold: b: disabled
</b>
`;

exports[`Text body-bold: b: error 1`] = `
<b
  className="typography typography_size-body-bold typography_color-error"
>
  body-bold: b: error
</b>
`;

exports[`Text body-bold: b: headers 1`] = `
<b
  className="typography typography_size-body-bold typography_color-headers"
>
  body-bold: b: headers
</b>
`;

exports[`Text body-bold: b: inherit 1`] = `
<b
  className="typography typography_size-body-bold typography_color-inherit"
>
  body-bold: b: inherit
</b>
`;

exports[`Text body-bold: b: inverse 1`] = `
<b
  className="typography typography_size-body-bold typography_color-inverse"
>
  body-bold: b: inverse
</b>
`;

exports[`Text body-bold: b: link 1`] = `
<b
  className="typography typography_size-body-bold typography_color-link"
>
  body-bold: b: link
</b>
`;

exports[`Text body-bold: b: secondary 1`] = `
<b
  className="typography typography_size-body-bold typography_color-secondary"
>
  body-bold: b: secondary
</b>
`;

exports[`Text body-bold: b: success 1`] = `
<b
  className="typography typography_size-body-bold typography_color-success"
>
  body-bold: b: success
</b>
`;

exports[`Text body-bold: b: warning 1`] = `
<b
  className="typography typography_size-body-bold typography_color-warning"
>
  body-bold: b: warning
</b>
`;

exports[`Text body-bold: em: basic 1`] = `
<em
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold: em: basic
</em>
`;

exports[`Text body-bold: em: brand 1`] = `
<em
  className="typography typography_size-body-bold typography_color-brand"
>
  body-bold: em: brand
</em>
`;

exports[`Text body-bold: em: brand-1 1`] = `
<em
  className="typography typography_size-body-bold typography_color-brand-1"
>
  body-bold: em: brand-1
</em>
`;

exports[`Text body-bold: em: disabled 1`] = `
<em
  className="typography typography_size-body-bold typography_color-disabled"
>
  body-bold: em: disabled
</em>
`;

exports[`Text body-bold: em: error 1`] = `
<em
  className="typography typography_size-body-bold typography_color-error"
>
  body-bold: em: error
</em>
`;

exports[`Text body-bold: em: headers 1`] = `
<em
  className="typography typography_size-body-bold typography_color-headers"
>
  body-bold: em: headers
</em>
`;

exports[`Text body-bold: em: inherit 1`] = `
<em
  className="typography typography_size-body-bold typography_color-inherit"
>
  body-bold: em: inherit
</em>
`;

exports[`Text body-bold: em: inverse 1`] = `
<em
  className="typography typography_size-body-bold typography_color-inverse"
>
  body-bold: em: inverse
</em>
`;

exports[`Text body-bold: em: link 1`] = `
<em
  className="typography typography_size-body-bold typography_color-link"
>
  body-bold: em: link
</em>
`;

exports[`Text body-bold: em: secondary 1`] = `
<em
  className="typography typography_size-body-bold typography_color-secondary"
>
  body-bold: em: secondary
</em>
`;

exports[`Text body-bold: em: success 1`] = `
<em
  className="typography typography_size-body-bold typography_color-success"
>
  body-bold: em: success
</em>
`;

exports[`Text body-bold: em: warning 1`] = `
<em
  className="typography typography_size-body-bold typography_color-warning"
>
  body-bold: em: warning
</em>
`;

exports[`Text body-bold: i: basic 1`] = `
<i
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold: i: basic
</i>
`;

exports[`Text body-bold: i: brand 1`] = `
<i
  className="typography typography_size-body-bold typography_color-brand"
>
  body-bold: i: brand
</i>
`;

exports[`Text body-bold: i: brand-1 1`] = `
<i
  className="typography typography_size-body-bold typography_color-brand-1"
>
  body-bold: i: brand-1
</i>
`;

exports[`Text body-bold: i: disabled 1`] = `
<i
  className="typography typography_size-body-bold typography_color-disabled"
>
  body-bold: i: disabled
</i>
`;

exports[`Text body-bold: i: error 1`] = `
<i
  className="typography typography_size-body-bold typography_color-error"
>
  body-bold: i: error
</i>
`;

exports[`Text body-bold: i: headers 1`] = `
<i
  className="typography typography_size-body-bold typography_color-headers"
>
  body-bold: i: headers
</i>
`;

exports[`Text body-bold: i: inherit 1`] = `
<i
  className="typography typography_size-body-bold typography_color-inherit"
>
  body-bold: i: inherit
</i>
`;

exports[`Text body-bold: i: inverse 1`] = `
<i
  className="typography typography_size-body-bold typography_color-inverse"
>
  body-bold: i: inverse
</i>
`;

exports[`Text body-bold: i: link 1`] = `
<i
  className="typography typography_size-body-bold typography_color-link"
>
  body-bold: i: link
</i>
`;

exports[`Text body-bold: i: secondary 1`] = `
<i
  className="typography typography_size-body-bold typography_color-secondary"
>
  body-bold: i: secondary
</i>
`;

exports[`Text body-bold: i: success 1`] = `
<i
  className="typography typography_size-body-bold typography_color-success"
>
  body-bold: i: success
</i>
`;

exports[`Text body-bold: i: warning 1`] = `
<i
  className="typography typography_size-body-bold typography_color-warning"
>
  body-bold: i: warning
</i>
`;

exports[`Text body-bold: p: basic 1`] = `
<p
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold: p: basic
</p>
`;

exports[`Text body-bold: p: brand 1`] = `
<p
  className="typography typography_size-body-bold typography_color-brand"
>
  body-bold: p: brand
</p>
`;

exports[`Text body-bold: p: brand-1 1`] = `
<p
  className="typography typography_size-body-bold typography_color-brand-1"
>
  body-bold: p: brand-1
</p>
`;

exports[`Text body-bold: p: disabled 1`] = `
<p
  className="typography typography_size-body-bold typography_color-disabled"
>
  body-bold: p: disabled
</p>
`;

exports[`Text body-bold: p: error 1`] = `
<p
  className="typography typography_size-body-bold typography_color-error"
>
  body-bold: p: error
</p>
`;

exports[`Text body-bold: p: headers 1`] = `
<p
  className="typography typography_size-body-bold typography_color-headers"
>
  body-bold: p: headers
</p>
`;

exports[`Text body-bold: p: inherit 1`] = `
<p
  className="typography typography_size-body-bold typography_color-inherit"
>
  body-bold: p: inherit
</p>
`;

exports[`Text body-bold: p: inverse 1`] = `
<p
  className="typography typography_size-body-bold typography_color-inverse"
>
  body-bold: p: inverse
</p>
`;

exports[`Text body-bold: p: link 1`] = `
<p
  className="typography typography_size-body-bold typography_color-link"
>
  body-bold: p: link
</p>
`;

exports[`Text body-bold: p: secondary 1`] = `
<p
  className="typography typography_size-body-bold typography_color-secondary"
>
  body-bold: p: secondary
</p>
`;

exports[`Text body-bold: p: success 1`] = `
<p
  className="typography typography_size-body-bold typography_color-success"
>
  body-bold: p: success
</p>
`;

exports[`Text body-bold: p: warning 1`] = `
<p
  className="typography typography_size-body-bold typography_color-warning"
>
  body-bold: p: warning
</p>
`;

exports[`Text body-bold: span: basic 1`] = `
<span
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold: span: basic
</span>
`;

exports[`Text body-bold: span: brand 1`] = `
<span
  className="typography typography_size-body-bold typography_color-brand"
>
  body-bold: span: brand
</span>
`;

exports[`Text body-bold: span: brand-1 1`] = `
<span
  className="typography typography_size-body-bold typography_color-brand-1"
>
  body-bold: span: brand-1
</span>
`;

exports[`Text body-bold: span: disabled 1`] = `
<span
  className="typography typography_size-body-bold typography_color-disabled"
>
  body-bold: span: disabled
</span>
`;

exports[`Text body-bold: span: error 1`] = `
<span
  className="typography typography_size-body-bold typography_color-error"
>
  body-bold: span: error
</span>
`;

exports[`Text body-bold: span: headers 1`] = `
<span
  className="typography typography_size-body-bold typography_color-headers"
>
  body-bold: span: headers
</span>
`;

exports[`Text body-bold: span: inherit 1`] = `
<span
  className="typography typography_size-body-bold typography_color-inherit"
>
  body-bold: span: inherit
</span>
`;

exports[`Text body-bold: span: inverse 1`] = `
<span
  className="typography typography_size-body-bold typography_color-inverse"
>
  body-bold: span: inverse
</span>
`;

exports[`Text body-bold: span: link 1`] = `
<span
  className="typography typography_size-body-bold typography_color-link"
>
  body-bold: span: link
</span>
`;

exports[`Text body-bold: span: secondary 1`] = `
<span
  className="typography typography_size-body-bold typography_color-secondary"
>
  body-bold: span: secondary
</span>
`;

exports[`Text body-bold: span: success 1`] = `
<span
  className="typography typography_size-body-bold typography_color-success"
>
  body-bold: span: success
</span>
`;

exports[`Text body-bold: span: warning 1`] = `
<span
  className="typography typography_size-body-bold typography_color-warning"
>
  body-bold: span: warning
</span>
`;

exports[`Text body-bold: strong: basic 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-basic"
>
  body-bold: strong: basic
</strong>
`;

exports[`Text body-bold: strong: brand 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-brand"
>
  body-bold: strong: brand
</strong>
`;

exports[`Text body-bold: strong: brand-1 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-brand-1"
>
  body-bold: strong: brand-1
</strong>
`;

exports[`Text body-bold: strong: disabled 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-disabled"
>
  body-bold: strong: disabled
</strong>
`;

exports[`Text body-bold: strong: error 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-error"
>
  body-bold: strong: error
</strong>
`;

exports[`Text body-bold: strong: headers 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-headers"
>
  body-bold: strong: headers
</strong>
`;

exports[`Text body-bold: strong: inherit 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-inherit"
>
  body-bold: strong: inherit
</strong>
`;

exports[`Text body-bold: strong: inverse 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-inverse"
>
  body-bold: strong: inverse
</strong>
`;

exports[`Text body-bold: strong: link 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-link"
>
  body-bold: strong: link
</strong>
`;

exports[`Text body-bold: strong: secondary 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-secondary"
>
  body-bold: strong: secondary
</strong>
`;

exports[`Text body-bold: strong: success 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-success"
>
  body-bold: strong: success
</strong>
`;

exports[`Text body-bold: strong: warning 1`] = `
<strong
  className="typography typography_size-body-bold typography_color-warning"
>
  body-bold: strong: warning
</strong>
`;

exports[`Text caption: a: basic 1`] = `
<a
  className="typography typography_size-caption typography_color-basic"
>
  caption: a: basic
</a>
`;

exports[`Text caption: a: brand 1`] = `
<a
  className="typography typography_size-caption typography_color-brand"
>
  caption: a: brand
</a>
`;

exports[`Text caption: a: brand-1 1`] = `
<a
  className="typography typography_size-caption typography_color-brand-1"
>
  caption: a: brand-1
</a>
`;

exports[`Text caption: a: disabled 1`] = `
<a
  className="typography typography_size-caption typography_color-disabled"
>
  caption: a: disabled
</a>
`;

exports[`Text caption: a: error 1`] = `
<a
  className="typography typography_size-caption typography_color-error"
>
  caption: a: error
</a>
`;

exports[`Text caption: a: headers 1`] = `
<a
  className="typography typography_size-caption typography_color-headers"
>
  caption: a: headers
</a>
`;

exports[`Text caption: a: inherit 1`] = `
<a
  className="typography typography_size-caption typography_color-inherit"
>
  caption: a: inherit
</a>
`;

exports[`Text caption: a: inverse 1`] = `
<a
  className="typography typography_size-caption typography_color-inverse"
>
  caption: a: inverse
</a>
`;

exports[`Text caption: a: link 1`] = `
<a
  className="typography typography_size-caption typography_color-link"
>
  caption: a: link
</a>
`;

exports[`Text caption: a: secondary 1`] = `
<a
  className="typography typography_size-caption typography_color-secondary"
>
  caption: a: secondary
</a>
`;

exports[`Text caption: a: success 1`] = `
<a
  className="typography typography_size-caption typography_color-success"
>
  caption: a: success
</a>
`;

exports[`Text caption: a: warning 1`] = `
<a
  className="typography typography_size-caption typography_color-warning"
>
  caption: a: warning
</a>
`;

exports[`Text caption: b: basic 1`] = `
<b
  className="typography typography_size-caption typography_color-basic"
>
  caption: b: basic
</b>
`;

exports[`Text caption: b: brand 1`] = `
<b
  className="typography typography_size-caption typography_color-brand"
>
  caption: b: brand
</b>
`;

exports[`Text caption: b: brand-1 1`] = `
<b
  className="typography typography_size-caption typography_color-brand-1"
>
  caption: b: brand-1
</b>
`;

exports[`Text caption: b: disabled 1`] = `
<b
  className="typography typography_size-caption typography_color-disabled"
>
  caption: b: disabled
</b>
`;

exports[`Text caption: b: error 1`] = `
<b
  className="typography typography_size-caption typography_color-error"
>
  caption: b: error
</b>
`;

exports[`Text caption: b: headers 1`] = `
<b
  className="typography typography_size-caption typography_color-headers"
>
  caption: b: headers
</b>
`;

exports[`Text caption: b: inherit 1`] = `
<b
  className="typography typography_size-caption typography_color-inherit"
>
  caption: b: inherit
</b>
`;

exports[`Text caption: b: inverse 1`] = `
<b
  className="typography typography_size-caption typography_color-inverse"
>
  caption: b: inverse
</b>
`;

exports[`Text caption: b: link 1`] = `
<b
  className="typography typography_size-caption typography_color-link"
>
  caption: b: link
</b>
`;

exports[`Text caption: b: secondary 1`] = `
<b
  className="typography typography_size-caption typography_color-secondary"
>
  caption: b: secondary
</b>
`;

exports[`Text caption: b: success 1`] = `
<b
  className="typography typography_size-caption typography_color-success"
>
  caption: b: success
</b>
`;

exports[`Text caption: b: warning 1`] = `
<b
  className="typography typography_size-caption typography_color-warning"
>
  caption: b: warning
</b>
`;

exports[`Text caption: em: basic 1`] = `
<em
  className="typography typography_size-caption typography_color-basic"
>
  caption: em: basic
</em>
`;

exports[`Text caption: em: brand 1`] = `
<em
  className="typography typography_size-caption typography_color-brand"
>
  caption: em: brand
</em>
`;

exports[`Text caption: em: brand-1 1`] = `
<em
  className="typography typography_size-caption typography_color-brand-1"
>
  caption: em: brand-1
</em>
`;

exports[`Text caption: em: disabled 1`] = `
<em
  className="typography typography_size-caption typography_color-disabled"
>
  caption: em: disabled
</em>
`;

exports[`Text caption: em: error 1`] = `
<em
  className="typography typography_size-caption typography_color-error"
>
  caption: em: error
</em>
`;

exports[`Text caption: em: headers 1`] = `
<em
  className="typography typography_size-caption typography_color-headers"
>
  caption: em: headers
</em>
`;

exports[`Text caption: em: inherit 1`] = `
<em
  className="typography typography_size-caption typography_color-inherit"
>
  caption: em: inherit
</em>
`;

exports[`Text caption: em: inverse 1`] = `
<em
  className="typography typography_size-caption typography_color-inverse"
>
  caption: em: inverse
</em>
`;

exports[`Text caption: em: link 1`] = `
<em
  className="typography typography_size-caption typography_color-link"
>
  caption: em: link
</em>
`;

exports[`Text caption: em: secondary 1`] = `
<em
  className="typography typography_size-caption typography_color-secondary"
>
  caption: em: secondary
</em>
`;

exports[`Text caption: em: success 1`] = `
<em
  className="typography typography_size-caption typography_color-success"
>
  caption: em: success
</em>
`;

exports[`Text caption: em: warning 1`] = `
<em
  className="typography typography_size-caption typography_color-warning"
>
  caption: em: warning
</em>
`;

exports[`Text caption: i: basic 1`] = `
<i
  className="typography typography_size-caption typography_color-basic"
>
  caption: i: basic
</i>
`;

exports[`Text caption: i: brand 1`] = `
<i
  className="typography typography_size-caption typography_color-brand"
>
  caption: i: brand
</i>
`;

exports[`Text caption: i: brand-1 1`] = `
<i
  className="typography typography_size-caption typography_color-brand-1"
>
  caption: i: brand-1
</i>
`;

exports[`Text caption: i: disabled 1`] = `
<i
  className="typography typography_size-caption typography_color-disabled"
>
  caption: i: disabled
</i>
`;

exports[`Text caption: i: error 1`] = `
<i
  className="typography typography_size-caption typography_color-error"
>
  caption: i: error
</i>
`;

exports[`Text caption: i: headers 1`] = `
<i
  className="typography typography_size-caption typography_color-headers"
>
  caption: i: headers
</i>
`;

exports[`Text caption: i: inherit 1`] = `
<i
  className="typography typography_size-caption typography_color-inherit"
>
  caption: i: inherit
</i>
`;

exports[`Text caption: i: inverse 1`] = `
<i
  className="typography typography_size-caption typography_color-inverse"
>
  caption: i: inverse
</i>
`;

exports[`Text caption: i: link 1`] = `
<i
  className="typography typography_size-caption typography_color-link"
>
  caption: i: link
</i>
`;

exports[`Text caption: i: secondary 1`] = `
<i
  className="typography typography_size-caption typography_color-secondary"
>
  caption: i: secondary
</i>
`;

exports[`Text caption: i: success 1`] = `
<i
  className="typography typography_size-caption typography_color-success"
>
  caption: i: success
</i>
`;

exports[`Text caption: i: warning 1`] = `
<i
  className="typography typography_size-caption typography_color-warning"
>
  caption: i: warning
</i>
`;

exports[`Text caption: p: basic 1`] = `
<p
  className="typography typography_size-caption typography_color-basic"
>
  caption: p: basic
</p>
`;

exports[`Text caption: p: brand 1`] = `
<p
  className="typography typography_size-caption typography_color-brand"
>
  caption: p: brand
</p>
`;

exports[`Text caption: p: brand-1 1`] = `
<p
  className="typography typography_size-caption typography_color-brand-1"
>
  caption: p: brand-1
</p>
`;

exports[`Text caption: p: disabled 1`] = `
<p
  className="typography typography_size-caption typography_color-disabled"
>
  caption: p: disabled
</p>
`;

exports[`Text caption: p: error 1`] = `
<p
  className="typography typography_size-caption typography_color-error"
>
  caption: p: error
</p>
`;

exports[`Text caption: p: headers 1`] = `
<p
  className="typography typography_size-caption typography_color-headers"
>
  caption: p: headers
</p>
`;

exports[`Text caption: p: inherit 1`] = `
<p
  className="typography typography_size-caption typography_color-inherit"
>
  caption: p: inherit
</p>
`;

exports[`Text caption: p: inverse 1`] = `
<p
  className="typography typography_size-caption typography_color-inverse"
>
  caption: p: inverse
</p>
`;

exports[`Text caption: p: link 1`] = `
<p
  className="typography typography_size-caption typography_color-link"
>
  caption: p: link
</p>
`;

exports[`Text caption: p: secondary 1`] = `
<p
  className="typography typography_size-caption typography_color-secondary"
>
  caption: p: secondary
</p>
`;

exports[`Text caption: p: success 1`] = `
<p
  className="typography typography_size-caption typography_color-success"
>
  caption: p: success
</p>
`;

exports[`Text caption: p: warning 1`] = `
<p
  className="typography typography_size-caption typography_color-warning"
>
  caption: p: warning
</p>
`;

exports[`Text caption: span: basic 1`] = `
<span
  className="typography typography_size-caption typography_color-basic"
>
  caption: span: basic
</span>
`;

exports[`Text caption: span: brand 1`] = `
<span
  className="typography typography_size-caption typography_color-brand"
>
  caption: span: brand
</span>
`;

exports[`Text caption: span: brand-1 1`] = `
<span
  className="typography typography_size-caption typography_color-brand-1"
>
  caption: span: brand-1
</span>
`;

exports[`Text caption: span: disabled 1`] = `
<span
  className="typography typography_size-caption typography_color-disabled"
>
  caption: span: disabled
</span>
`;

exports[`Text caption: span: error 1`] = `
<span
  className="typography typography_size-caption typography_color-error"
>
  caption: span: error
</span>
`;

exports[`Text caption: span: headers 1`] = `
<span
  className="typography typography_size-caption typography_color-headers"
>
  caption: span: headers
</span>
`;

exports[`Text caption: span: inherit 1`] = `
<span
  className="typography typography_size-caption typography_color-inherit"
>
  caption: span: inherit
</span>
`;

exports[`Text caption: span: inverse 1`] = `
<span
  className="typography typography_size-caption typography_color-inverse"
>
  caption: span: inverse
</span>
`;

exports[`Text caption: span: link 1`] = `
<span
  className="typography typography_size-caption typography_color-link"
>
  caption: span: link
</span>
`;

exports[`Text caption: span: secondary 1`] = `
<span
  className="typography typography_size-caption typography_color-secondary"
>
  caption: span: secondary
</span>
`;

exports[`Text caption: span: success 1`] = `
<span
  className="typography typography_size-caption typography_color-success"
>
  caption: span: success
</span>
`;

exports[`Text caption: span: warning 1`] = `
<span
  className="typography typography_size-caption typography_color-warning"
>
  caption: span: warning
</span>
`;

exports[`Text caption: strong: basic 1`] = `
<strong
  className="typography typography_size-caption typography_color-basic"
>
  caption: strong: basic
</strong>
`;

exports[`Text caption: strong: brand 1`] = `
<strong
  className="typography typography_size-caption typography_color-brand"
>
  caption: strong: brand
</strong>
`;

exports[`Text caption: strong: brand-1 1`] = `
<strong
  className="typography typography_size-caption typography_color-brand-1"
>
  caption: strong: brand-1
</strong>
`;

exports[`Text caption: strong: disabled 1`] = `
<strong
  className="typography typography_size-caption typography_color-disabled"
>
  caption: strong: disabled
</strong>
`;

exports[`Text caption: strong: error 1`] = `
<strong
  className="typography typography_size-caption typography_color-error"
>
  caption: strong: error
</strong>
`;

exports[`Text caption: strong: headers 1`] = `
<strong
  className="typography typography_size-caption typography_color-headers"
>
  caption: strong: headers
</strong>
`;

exports[`Text caption: strong: inherit 1`] = `
<strong
  className="typography typography_size-caption typography_color-inherit"
>
  caption: strong: inherit
</strong>
`;

exports[`Text caption: strong: inverse 1`] = `
<strong
  className="typography typography_size-caption typography_color-inverse"
>
  caption: strong: inverse
</strong>
`;

exports[`Text caption: strong: link 1`] = `
<strong
  className="typography typography_size-caption typography_color-link"
>
  caption: strong: link
</strong>
`;

exports[`Text caption: strong: secondary 1`] = `
<strong
  className="typography typography_size-caption typography_color-secondary"
>
  caption: strong: secondary
</strong>
`;

exports[`Text caption: strong: success 1`] = `
<strong
  className="typography typography_size-caption typography_color-success"
>
  caption: strong: success
</strong>
`;

exports[`Text caption: strong: warning 1`] = `
<strong
  className="typography typography_size-caption typography_color-warning"
>
  caption: strong: warning
</strong>
`;

exports[`Text caption-bold: a: basic 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold: a: basic
</a>
`;

exports[`Text caption-bold: a: brand 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-brand"
>
  caption-bold: a: brand
</a>
`;

exports[`Text caption-bold: a: brand-1 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-brand-1"
>
  caption-bold: a: brand-1
</a>
`;

exports[`Text caption-bold: a: disabled 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-disabled"
>
  caption-bold: a: disabled
</a>
`;

exports[`Text caption-bold: a: error 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-error"
>
  caption-bold: a: error
</a>
`;

exports[`Text caption-bold: a: headers 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-headers"
>
  caption-bold: a: headers
</a>
`;

exports[`Text caption-bold: a: inherit 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-inherit"
>
  caption-bold: a: inherit
</a>
`;

exports[`Text caption-bold: a: inverse 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-inverse"
>
  caption-bold: a: inverse
</a>
`;

exports[`Text caption-bold: a: link 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-link"
>
  caption-bold: a: link
</a>
`;

exports[`Text caption-bold: a: secondary 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-secondary"
>
  caption-bold: a: secondary
</a>
`;

exports[`Text caption-bold: a: success 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-success"
>
  caption-bold: a: success
</a>
`;

exports[`Text caption-bold: a: warning 1`] = `
<a
  className="typography typography_size-caption-bold typography_color-warning"
>
  caption-bold: a: warning
</a>
`;

exports[`Text caption-bold: b: basic 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold: b: basic
</b>
`;

exports[`Text caption-bold: b: brand 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-brand"
>
  caption-bold: b: brand
</b>
`;

exports[`Text caption-bold: b: brand-1 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-brand-1"
>
  caption-bold: b: brand-1
</b>
`;

exports[`Text caption-bold: b: disabled 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-disabled"
>
  caption-bold: b: disabled
</b>
`;

exports[`Text caption-bold: b: error 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-error"
>
  caption-bold: b: error
</b>
`;

exports[`Text caption-bold: b: headers 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-headers"
>
  caption-bold: b: headers
</b>
`;

exports[`Text caption-bold: b: inherit 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-inherit"
>
  caption-bold: b: inherit
</b>
`;

exports[`Text caption-bold: b: inverse 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-inverse"
>
  caption-bold: b: inverse
</b>
`;

exports[`Text caption-bold: b: link 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-link"
>
  caption-bold: b: link
</b>
`;

exports[`Text caption-bold: b: secondary 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-secondary"
>
  caption-bold: b: secondary
</b>
`;

exports[`Text caption-bold: b: success 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-success"
>
  caption-bold: b: success
</b>
`;

exports[`Text caption-bold: b: warning 1`] = `
<b
  className="typography typography_size-caption-bold typography_color-warning"
>
  caption-bold: b: warning
</b>
`;

exports[`Text caption-bold: em: basic 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold: em: basic
</em>
`;

exports[`Text caption-bold: em: brand 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-brand"
>
  caption-bold: em: brand
</em>
`;

exports[`Text caption-bold: em: brand-1 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-brand-1"
>
  caption-bold: em: brand-1
</em>
`;

exports[`Text caption-bold: em: disabled 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-disabled"
>
  caption-bold: em: disabled
</em>
`;

exports[`Text caption-bold: em: error 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-error"
>
  caption-bold: em: error
</em>
`;

exports[`Text caption-bold: em: headers 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-headers"
>
  caption-bold: em: headers
</em>
`;

exports[`Text caption-bold: em: inherit 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-inherit"
>
  caption-bold: em: inherit
</em>
`;

exports[`Text caption-bold: em: inverse 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-inverse"
>
  caption-bold: em: inverse
</em>
`;

exports[`Text caption-bold: em: link 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-link"
>
  caption-bold: em: link
</em>
`;

exports[`Text caption-bold: em: secondary 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-secondary"
>
  caption-bold: em: secondary
</em>
`;

exports[`Text caption-bold: em: success 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-success"
>
  caption-bold: em: success
</em>
`;

exports[`Text caption-bold: em: warning 1`] = `
<em
  className="typography typography_size-caption-bold typography_color-warning"
>
  caption-bold: em: warning
</em>
`;

exports[`Text caption-bold: i: basic 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold: i: basic
</i>
`;

exports[`Text caption-bold: i: brand 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-brand"
>
  caption-bold: i: brand
</i>
`;

exports[`Text caption-bold: i: brand-1 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-brand-1"
>
  caption-bold: i: brand-1
</i>
`;

exports[`Text caption-bold: i: disabled 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-disabled"
>
  caption-bold: i: disabled
</i>
`;

exports[`Text caption-bold: i: error 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-error"
>
  caption-bold: i: error
</i>
`;

exports[`Text caption-bold: i: headers 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-headers"
>
  caption-bold: i: headers
</i>
`;

exports[`Text caption-bold: i: inherit 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-inherit"
>
  caption-bold: i: inherit
</i>
`;

exports[`Text caption-bold: i: inverse 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-inverse"
>
  caption-bold: i: inverse
</i>
`;

exports[`Text caption-bold: i: link 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-link"
>
  caption-bold: i: link
</i>
`;

exports[`Text caption-bold: i: secondary 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-secondary"
>
  caption-bold: i: secondary
</i>
`;

exports[`Text caption-bold: i: success 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-success"
>
  caption-bold: i: success
</i>
`;

exports[`Text caption-bold: i: warning 1`] = `
<i
  className="typography typography_size-caption-bold typography_color-warning"
>
  caption-bold: i: warning
</i>
`;

exports[`Text caption-bold: p: basic 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold: p: basic
</p>
`;

exports[`Text caption-bold: p: brand 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-brand"
>
  caption-bold: p: brand
</p>
`;

exports[`Text caption-bold: p: brand-1 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-brand-1"
>
  caption-bold: p: brand-1
</p>
`;

exports[`Text caption-bold: p: disabled 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-disabled"
>
  caption-bold: p: disabled
</p>
`;

exports[`Text caption-bold: p: error 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-error"
>
  caption-bold: p: error
</p>
`;

exports[`Text caption-bold: p: headers 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-headers"
>
  caption-bold: p: headers
</p>
`;

exports[`Text caption-bold: p: inherit 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-inherit"
>
  caption-bold: p: inherit
</p>
`;

exports[`Text caption-bold: p: inverse 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-inverse"
>
  caption-bold: p: inverse
</p>
`;

exports[`Text caption-bold: p: link 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-link"
>
  caption-bold: p: link
</p>
`;

exports[`Text caption-bold: p: secondary 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-secondary"
>
  caption-bold: p: secondary
</p>
`;

exports[`Text caption-bold: p: success 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-success"
>
  caption-bold: p: success
</p>
`;

exports[`Text caption-bold: p: warning 1`] = `
<p
  className="typography typography_size-caption-bold typography_color-warning"
>
  caption-bold: p: warning
</p>
`;

exports[`Text caption-bold: span: basic 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold: span: basic
</span>
`;

exports[`Text caption-bold: span: brand 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-brand"
>
  caption-bold: span: brand
</span>
`;

exports[`Text caption-bold: span: brand-1 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-brand-1"
>
  caption-bold: span: brand-1
</span>
`;

exports[`Text caption-bold: span: disabled 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-disabled"
>
  caption-bold: span: disabled
</span>
`;

exports[`Text caption-bold: span: error 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-error"
>
  caption-bold: span: error
</span>
`;

exports[`Text caption-bold: span: headers 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-headers"
>
  caption-bold: span: headers
</span>
`;

exports[`Text caption-bold: span: inherit 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-inherit"
>
  caption-bold: span: inherit
</span>
`;

exports[`Text caption-bold: span: inverse 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-inverse"
>
  caption-bold: span: inverse
</span>
`;

exports[`Text caption-bold: span: link 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-link"
>
  caption-bold: span: link
</span>
`;

exports[`Text caption-bold: span: secondary 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-secondary"
>
  caption-bold: span: secondary
</span>
`;

exports[`Text caption-bold: span: success 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-success"
>
  caption-bold: span: success
</span>
`;

exports[`Text caption-bold: span: warning 1`] = `
<span
  className="typography typography_size-caption-bold typography_color-warning"
>
  caption-bold: span: warning
</span>
`;

exports[`Text caption-bold: strong: basic 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-basic"
>
  caption-bold: strong: basic
</strong>
`;

exports[`Text caption-bold: strong: brand 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-brand"
>
  caption-bold: strong: brand
</strong>
`;

exports[`Text caption-bold: strong: brand-1 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-brand-1"
>
  caption-bold: strong: brand-1
</strong>
`;

exports[`Text caption-bold: strong: disabled 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-disabled"
>
  caption-bold: strong: disabled
</strong>
`;

exports[`Text caption-bold: strong: error 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-error"
>
  caption-bold: strong: error
</strong>
`;

exports[`Text caption-bold: strong: headers 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-headers"
>
  caption-bold: strong: headers
</strong>
`;

exports[`Text caption-bold: strong: inherit 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-inherit"
>
  caption-bold: strong: inherit
</strong>
`;

exports[`Text caption-bold: strong: inverse 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-inverse"
>
  caption-bold: strong: inverse
</strong>
`;

exports[`Text caption-bold: strong: link 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-link"
>
  caption-bold: strong: link
</strong>
`;

exports[`Text caption-bold: strong: secondary 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-secondary"
>
  caption-bold: strong: secondary
</strong>
`;

exports[`Text caption-bold: strong: success 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-success"
>
  caption-bold: strong: success
</strong>
`;

exports[`Text caption-bold: strong: warning 1`] = `
<strong
  className="typography typography_size-caption-bold typography_color-warning"
>
  caption-bold: strong: warning
</strong>
`;

exports[`Text large: a: basic 1`] = `
<a
  className="typography typography_size-large typography_color-basic"
>
  large: a: basic
</a>
`;

exports[`Text large: a: brand 1`] = `
<a
  className="typography typography_size-large typography_color-brand"
>
  large: a: brand
</a>
`;

exports[`Text large: a: brand-1 1`] = `
<a
  className="typography typography_size-large typography_color-brand-1"
>
  large: a: brand-1
</a>
`;

exports[`Text large: a: disabled 1`] = `
<a
  className="typography typography_size-large typography_color-disabled"
>
  large: a: disabled
</a>
`;

exports[`Text large: a: error 1`] = `
<a
  className="typography typography_size-large typography_color-error"
>
  large: a: error
</a>
`;

exports[`Text large: a: headers 1`] = `
<a
  className="typography typography_size-large typography_color-headers"
>
  large: a: headers
</a>
`;

exports[`Text large: a: inherit 1`] = `
<a
  className="typography typography_size-large typography_color-inherit"
>
  large: a: inherit
</a>
`;

exports[`Text large: a: inverse 1`] = `
<a
  className="typography typography_size-large typography_color-inverse"
>
  large: a: inverse
</a>
`;

exports[`Text large: a: link 1`] = `
<a
  className="typography typography_size-large typography_color-link"
>
  large: a: link
</a>
`;

exports[`Text large: a: secondary 1`] = `
<a
  className="typography typography_size-large typography_color-secondary"
>
  large: a: secondary
</a>
`;

exports[`Text large: a: success 1`] = `
<a
  className="typography typography_size-large typography_color-success"
>
  large: a: success
</a>
`;

exports[`Text large: a: warning 1`] = `
<a
  className="typography typography_size-large typography_color-warning"
>
  large: a: warning
</a>
`;

exports[`Text large: b: basic 1`] = `
<b
  className="typography typography_size-large typography_color-basic"
>
  large: b: basic
</b>
`;

exports[`Text large: b: brand 1`] = `
<b
  className="typography typography_size-large typography_color-brand"
>
  large: b: brand
</b>
`;

exports[`Text large: b: brand-1 1`] = `
<b
  className="typography typography_size-large typography_color-brand-1"
>
  large: b: brand-1
</b>
`;

exports[`Text large: b: disabled 1`] = `
<b
  className="typography typography_size-large typography_color-disabled"
>
  large: b: disabled
</b>
`;

exports[`Text large: b: error 1`] = `
<b
  className="typography typography_size-large typography_color-error"
>
  large: b: error
</b>
`;

exports[`Text large: b: headers 1`] = `
<b
  className="typography typography_size-large typography_color-headers"
>
  large: b: headers
</b>
`;

exports[`Text large: b: inherit 1`] = `
<b
  className="typography typography_size-large typography_color-inherit"
>
  large: b: inherit
</b>
`;

exports[`Text large: b: inverse 1`] = `
<b
  className="typography typography_size-large typography_color-inverse"
>
  large: b: inverse
</b>
`;

exports[`Text large: b: link 1`] = `
<b
  className="typography typography_size-large typography_color-link"
>
  large: b: link
</b>
`;

exports[`Text large: b: secondary 1`] = `
<b
  className="typography typography_size-large typography_color-secondary"
>
  large: b: secondary
</b>
`;

exports[`Text large: b: success 1`] = `
<b
  className="typography typography_size-large typography_color-success"
>
  large: b: success
</b>
`;

exports[`Text large: b: warning 1`] = `
<b
  className="typography typography_size-large typography_color-warning"
>
  large: b: warning
</b>
`;

exports[`Text large: em: basic 1`] = `
<em
  className="typography typography_size-large typography_color-basic"
>
  large: em: basic
</em>
`;

exports[`Text large: em: brand 1`] = `
<em
  className="typography typography_size-large typography_color-brand"
>
  large: em: brand
</em>
`;

exports[`Text large: em: brand-1 1`] = `
<em
  className="typography typography_size-large typography_color-brand-1"
>
  large: em: brand-1
</em>
`;

exports[`Text large: em: disabled 1`] = `
<em
  className="typography typography_size-large typography_color-disabled"
>
  large: em: disabled
</em>
`;

exports[`Text large: em: error 1`] = `
<em
  className="typography typography_size-large typography_color-error"
>
  large: em: error
</em>
`;

exports[`Text large: em: headers 1`] = `
<em
  className="typography typography_size-large typography_color-headers"
>
  large: em: headers
</em>
`;

exports[`Text large: em: inherit 1`] = `
<em
  className="typography typography_size-large typography_color-inherit"
>
  large: em: inherit
</em>
`;

exports[`Text large: em: inverse 1`] = `
<em
  className="typography typography_size-large typography_color-inverse"
>
  large: em: inverse
</em>
`;

exports[`Text large: em: link 1`] = `
<em
  className="typography typography_size-large typography_color-link"
>
  large: em: link
</em>
`;

exports[`Text large: em: secondary 1`] = `
<em
  className="typography typography_size-large typography_color-secondary"
>
  large: em: secondary
</em>
`;

exports[`Text large: em: success 1`] = `
<em
  className="typography typography_size-large typography_color-success"
>
  large: em: success
</em>
`;

exports[`Text large: em: warning 1`] = `
<em
  className="typography typography_size-large typography_color-warning"
>
  large: em: warning
</em>
`;

exports[`Text large: i: basic 1`] = `
<i
  className="typography typography_size-large typography_color-basic"
>
  large: i: basic
</i>
`;

exports[`Text large: i: brand 1`] = `
<i
  className="typography typography_size-large typography_color-brand"
>
  large: i: brand
</i>
`;

exports[`Text large: i: brand-1 1`] = `
<i
  className="typography typography_size-large typography_color-brand-1"
>
  large: i: brand-1
</i>
`;

exports[`Text large: i: disabled 1`] = `
<i
  className="typography typography_size-large typography_color-disabled"
>
  large: i: disabled
</i>
`;

exports[`Text large: i: error 1`] = `
<i
  className="typography typography_size-large typography_color-error"
>
  large: i: error
</i>
`;

exports[`Text large: i: headers 1`] = `
<i
  className="typography typography_size-large typography_color-headers"
>
  large: i: headers
</i>
`;

exports[`Text large: i: inherit 1`] = `
<i
  className="typography typography_size-large typography_color-inherit"
>
  large: i: inherit
</i>
`;

exports[`Text large: i: inverse 1`] = `
<i
  className="typography typography_size-large typography_color-inverse"
>
  large: i: inverse
</i>
`;

exports[`Text large: i: link 1`] = `
<i
  className="typography typography_size-large typography_color-link"
>
  large: i: link
</i>
`;

exports[`Text large: i: secondary 1`] = `
<i
  className="typography typography_size-large typography_color-secondary"
>
  large: i: secondary
</i>
`;

exports[`Text large: i: success 1`] = `
<i
  className="typography typography_size-large typography_color-success"
>
  large: i: success
</i>
`;

exports[`Text large: i: warning 1`] = `
<i
  className="typography typography_size-large typography_color-warning"
>
  large: i: warning
</i>
`;

exports[`Text large: p: basic 1`] = `
<p
  className="typography typography_size-large typography_color-basic"
>
  large: p: basic
</p>
`;

exports[`Text large: p: brand 1`] = `
<p
  className="typography typography_size-large typography_color-brand"
>
  large: p: brand
</p>
`;

exports[`Text large: p: brand-1 1`] = `
<p
  className="typography typography_size-large typography_color-brand-1"
>
  large: p: brand-1
</p>
`;

exports[`Text large: p: disabled 1`] = `
<p
  className="typography typography_size-large typography_color-disabled"
>
  large: p: disabled
</p>
`;

exports[`Text large: p: error 1`] = `
<p
  className="typography typography_size-large typography_color-error"
>
  large: p: error
</p>
`;

exports[`Text large: p: headers 1`] = `
<p
  className="typography typography_size-large typography_color-headers"
>
  large: p: headers
</p>
`;

exports[`Text large: p: inherit 1`] = `
<p
  className="typography typography_size-large typography_color-inherit"
>
  large: p: inherit
</p>
`;

exports[`Text large: p: inverse 1`] = `
<p
  className="typography typography_size-large typography_color-inverse"
>
  large: p: inverse
</p>
`;

exports[`Text large: p: link 1`] = `
<p
  className="typography typography_size-large typography_color-link"
>
  large: p: link
</p>
`;

exports[`Text large: p: secondary 1`] = `
<p
  className="typography typography_size-large typography_color-secondary"
>
  large: p: secondary
</p>
`;

exports[`Text large: p: success 1`] = `
<p
  className="typography typography_size-large typography_color-success"
>
  large: p: success
</p>
`;

exports[`Text large: p: warning 1`] = `
<p
  className="typography typography_size-large typography_color-warning"
>
  large: p: warning
</p>
`;

exports[`Text large: span: basic 1`] = `
<span
  className="typography typography_size-large typography_color-basic"
>
  large: span: basic
</span>
`;

exports[`Text large: span: brand 1`] = `
<span
  className="typography typography_size-large typography_color-brand"
>
  large: span: brand
</span>
`;

exports[`Text large: span: brand-1 1`] = `
<span
  className="typography typography_size-large typography_color-brand-1"
>
  large: span: brand-1
</span>
`;

exports[`Text large: span: disabled 1`] = `
<span
  className="typography typography_size-large typography_color-disabled"
>
  large: span: disabled
</span>
`;

exports[`Text large: span: error 1`] = `
<span
  className="typography typography_size-large typography_color-error"
>
  large: span: error
</span>
`;

exports[`Text large: span: headers 1`] = `
<span
  className="typography typography_size-large typography_color-headers"
>
  large: span: headers
</span>
`;

exports[`Text large: span: inherit 1`] = `
<span
  className="typography typography_size-large typography_color-inherit"
>
  large: span: inherit
</span>
`;

exports[`Text large: span: inverse 1`] = `
<span
  className="typography typography_size-large typography_color-inverse"
>
  large: span: inverse
</span>
`;

exports[`Text large: span: link 1`] = `
<span
  className="typography typography_size-large typography_color-link"
>
  large: span: link
</span>
`;

exports[`Text large: span: secondary 1`] = `
<span
  className="typography typography_size-large typography_color-secondary"
>
  large: span: secondary
</span>
`;

exports[`Text large: span: success 1`] = `
<span
  className="typography typography_size-large typography_color-success"
>
  large: span: success
</span>
`;

exports[`Text large: span: warning 1`] = `
<span
  className="typography typography_size-large typography_color-warning"
>
  large: span: warning
</span>
`;

exports[`Text large: strong: basic 1`] = `
<strong
  className="typography typography_size-large typography_color-basic"
>
  large: strong: basic
</strong>
`;

exports[`Text large: strong: brand 1`] = `
<strong
  className="typography typography_size-large typography_color-brand"
>
  large: strong: brand
</strong>
`;

exports[`Text large: strong: brand-1 1`] = `
<strong
  className="typography typography_size-large typography_color-brand-1"
>
  large: strong: brand-1
</strong>
`;

exports[`Text large: strong: disabled 1`] = `
<strong
  className="typography typography_size-large typography_color-disabled"
>
  large: strong: disabled
</strong>
`;

exports[`Text large: strong: error 1`] = `
<strong
  className="typography typography_size-large typography_color-error"
>
  large: strong: error
</strong>
`;

exports[`Text large: strong: headers 1`] = `
<strong
  className="typography typography_size-large typography_color-headers"
>
  large: strong: headers
</strong>
`;

exports[`Text large: strong: inherit 1`] = `
<strong
  className="typography typography_size-large typography_color-inherit"
>
  large: strong: inherit
</strong>
`;

exports[`Text large: strong: inverse 1`] = `
<strong
  className="typography typography_size-large typography_color-inverse"
>
  large: strong: inverse
</strong>
`;

exports[`Text large: strong: link 1`] = `
<strong
  className="typography typography_size-large typography_color-link"
>
  large: strong: link
</strong>
`;

exports[`Text large: strong: secondary 1`] = `
<strong
  className="typography typography_size-large typography_color-secondary"
>
  large: strong: secondary
</strong>
`;

exports[`Text large: strong: success 1`] = `
<strong
  className="typography typography_size-large typography_color-success"
>
  large: strong: success
</strong>
`;

exports[`Text large: strong: warning 1`] = `
<strong
  className="typography typography_size-large typography_color-warning"
>
  large: strong: warning
</strong>
`;

exports[`Text large-bold: a: basic 1`] = `
<a
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold: a: basic
</a>
`;

exports[`Text large-bold: a: brand 1`] = `
<a
  className="typography typography_size-large-bold typography_color-brand"
>
  large-bold: a: brand
</a>
`;

exports[`Text large-bold: a: brand-1 1`] = `
<a
  className="typography typography_size-large-bold typography_color-brand-1"
>
  large-bold: a: brand-1
</a>
`;

exports[`Text large-bold: a: disabled 1`] = `
<a
  className="typography typography_size-large-bold typography_color-disabled"
>
  large-bold: a: disabled
</a>
`;

exports[`Text large-bold: a: error 1`] = `
<a
  className="typography typography_size-large-bold typography_color-error"
>
  large-bold: a: error
</a>
`;

exports[`Text large-bold: a: headers 1`] = `
<a
  className="typography typography_size-large-bold typography_color-headers"
>
  large-bold: a: headers
</a>
`;

exports[`Text large-bold: a: inherit 1`] = `
<a
  className="typography typography_size-large-bold typography_color-inherit"
>
  large-bold: a: inherit
</a>
`;

exports[`Text large-bold: a: inverse 1`] = `
<a
  className="typography typography_size-large-bold typography_color-inverse"
>
  large-bold: a: inverse
</a>
`;

exports[`Text large-bold: a: link 1`] = `
<a
  className="typography typography_size-large-bold typography_color-link"
>
  large-bold: a: link
</a>
`;

exports[`Text large-bold: a: secondary 1`] = `
<a
  className="typography typography_size-large-bold typography_color-secondary"
>
  large-bold: a: secondary
</a>
`;

exports[`Text large-bold: a: success 1`] = `
<a
  className="typography typography_size-large-bold typography_color-success"
>
  large-bold: a: success
</a>
`;

exports[`Text large-bold: a: warning 1`] = `
<a
  className="typography typography_size-large-bold typography_color-warning"
>
  large-bold: a: warning
</a>
`;

exports[`Text large-bold: b: basic 1`] = `
<b
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold: b: basic
</b>
`;

exports[`Text large-bold: b: brand 1`] = `
<b
  className="typography typography_size-large-bold typography_color-brand"
>
  large-bold: b: brand
</b>
`;

exports[`Text large-bold: b: brand-1 1`] = `
<b
  className="typography typography_size-large-bold typography_color-brand-1"
>
  large-bold: b: brand-1
</b>
`;

exports[`Text large-bold: b: disabled 1`] = `
<b
  className="typography typography_size-large-bold typography_color-disabled"
>
  large-bold: b: disabled
</b>
`;

exports[`Text large-bold: b: error 1`] = `
<b
  className="typography typography_size-large-bold typography_color-error"
>
  large-bold: b: error
</b>
`;

exports[`Text large-bold: b: headers 1`] = `
<b
  className="typography typography_size-large-bold typography_color-headers"
>
  large-bold: b: headers
</b>
`;

exports[`Text large-bold: b: inherit 1`] = `
<b
  className="typography typography_size-large-bold typography_color-inherit"
>
  large-bold: b: inherit
</b>
`;

exports[`Text large-bold: b: inverse 1`] = `
<b
  className="typography typography_size-large-bold typography_color-inverse"
>
  large-bold: b: inverse
</b>
`;

exports[`Text large-bold: b: link 1`] = `
<b
  className="typography typography_size-large-bold typography_color-link"
>
  large-bold: b: link
</b>
`;

exports[`Text large-bold: b: secondary 1`] = `
<b
  className="typography typography_size-large-bold typography_color-secondary"
>
  large-bold: b: secondary
</b>
`;

exports[`Text large-bold: b: success 1`] = `
<b
  className="typography typography_size-large-bold typography_color-success"
>
  large-bold: b: success
</b>
`;

exports[`Text large-bold: b: warning 1`] = `
<b
  className="typography typography_size-large-bold typography_color-warning"
>
  large-bold: b: warning
</b>
`;

exports[`Text large-bold: em: basic 1`] = `
<em
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold: em: basic
</em>
`;

exports[`Text large-bold: em: brand 1`] = `
<em
  className="typography typography_size-large-bold typography_color-brand"
>
  large-bold: em: brand
</em>
`;

exports[`Text large-bold: em: brand-1 1`] = `
<em
  className="typography typography_size-large-bold typography_color-brand-1"
>
  large-bold: em: brand-1
</em>
`;

exports[`Text large-bold: em: disabled 1`] = `
<em
  className="typography typography_size-large-bold typography_color-disabled"
>
  large-bold: em: disabled
</em>
`;

exports[`Text large-bold: em: error 1`] = `
<em
  className="typography typography_size-large-bold typography_color-error"
>
  large-bold: em: error
</em>
`;

exports[`Text large-bold: em: headers 1`] = `
<em
  className="typography typography_size-large-bold typography_color-headers"
>
  large-bold: em: headers
</em>
`;

exports[`Text large-bold: em: inherit 1`] = `
<em
  className="typography typography_size-large-bold typography_color-inherit"
>
  large-bold: em: inherit
</em>
`;

exports[`Text large-bold: em: inverse 1`] = `
<em
  className="typography typography_size-large-bold typography_color-inverse"
>
  large-bold: em: inverse
</em>
`;

exports[`Text large-bold: em: link 1`] = `
<em
  className="typography typography_size-large-bold typography_color-link"
>
  large-bold: em: link
</em>
`;

exports[`Text large-bold: em: secondary 1`] = `
<em
  className="typography typography_size-large-bold typography_color-secondary"
>
  large-bold: em: secondary
</em>
`;

exports[`Text large-bold: em: success 1`] = `
<em
  className="typography typography_size-large-bold typography_color-success"
>
  large-bold: em: success
</em>
`;

exports[`Text large-bold: em: warning 1`] = `
<em
  className="typography typography_size-large-bold typography_color-warning"
>
  large-bold: em: warning
</em>
`;

exports[`Text large-bold: i: basic 1`] = `
<i
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold: i: basic
</i>
`;

exports[`Text large-bold: i: brand 1`] = `
<i
  className="typography typography_size-large-bold typography_color-brand"
>
  large-bold: i: brand
</i>
`;

exports[`Text large-bold: i: brand-1 1`] = `
<i
  className="typography typography_size-large-bold typography_color-brand-1"
>
  large-bold: i: brand-1
</i>
`;

exports[`Text large-bold: i: disabled 1`] = `
<i
  className="typography typography_size-large-bold typography_color-disabled"
>
  large-bold: i: disabled
</i>
`;

exports[`Text large-bold: i: error 1`] = `
<i
  className="typography typography_size-large-bold typography_color-error"
>
  large-bold: i: error
</i>
`;

exports[`Text large-bold: i: headers 1`] = `
<i
  className="typography typography_size-large-bold typography_color-headers"
>
  large-bold: i: headers
</i>
`;

exports[`Text large-bold: i: inherit 1`] = `
<i
  className="typography typography_size-large-bold typography_color-inherit"
>
  large-bold: i: inherit
</i>
`;

exports[`Text large-bold: i: inverse 1`] = `
<i
  className="typography typography_size-large-bold typography_color-inverse"
>
  large-bold: i: inverse
</i>
`;

exports[`Text large-bold: i: link 1`] = `
<i
  className="typography typography_size-large-bold typography_color-link"
>
  large-bold: i: link
</i>
`;

exports[`Text large-bold: i: secondary 1`] = `
<i
  className="typography typography_size-large-bold typography_color-secondary"
>
  large-bold: i: secondary
</i>
`;

exports[`Text large-bold: i: success 1`] = `
<i
  className="typography typography_size-large-bold typography_color-success"
>
  large-bold: i: success
</i>
`;

exports[`Text large-bold: i: warning 1`] = `
<i
  className="typography typography_size-large-bold typography_color-warning"
>
  large-bold: i: warning
</i>
`;

exports[`Text large-bold: p: basic 1`] = `
<p
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold: p: basic
</p>
`;

exports[`Text large-bold: p: brand 1`] = `
<p
  className="typography typography_size-large-bold typography_color-brand"
>
  large-bold: p: brand
</p>
`;

exports[`Text large-bold: p: brand-1 1`] = `
<p
  className="typography typography_size-large-bold typography_color-brand-1"
>
  large-bold: p: brand-1
</p>
`;

exports[`Text large-bold: p: disabled 1`] = `
<p
  className="typography typography_size-large-bold typography_color-disabled"
>
  large-bold: p: disabled
</p>
`;

exports[`Text large-bold: p: error 1`] = `
<p
  className="typography typography_size-large-bold typography_color-error"
>
  large-bold: p: error
</p>
`;

exports[`Text large-bold: p: headers 1`] = `
<p
  className="typography typography_size-large-bold typography_color-headers"
>
  large-bold: p: headers
</p>
`;

exports[`Text large-bold: p: inherit 1`] = `
<p
  className="typography typography_size-large-bold typography_color-inherit"
>
  large-bold: p: inherit
</p>
`;

exports[`Text large-bold: p: inverse 1`] = `
<p
  className="typography typography_size-large-bold typography_color-inverse"
>
  large-bold: p: inverse
</p>
`;

exports[`Text large-bold: p: link 1`] = `
<p
  className="typography typography_size-large-bold typography_color-link"
>
  large-bold: p: link
</p>
`;

exports[`Text large-bold: p: secondary 1`] = `
<p
  className="typography typography_size-large-bold typography_color-secondary"
>
  large-bold: p: secondary
</p>
`;

exports[`Text large-bold: p: success 1`] = `
<p
  className="typography typography_size-large-bold typography_color-success"
>
  large-bold: p: success
</p>
`;

exports[`Text large-bold: p: warning 1`] = `
<p
  className="typography typography_size-large-bold typography_color-warning"
>
  large-bold: p: warning
</p>
`;

exports[`Text large-bold: span: basic 1`] = `
<span
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold: span: basic
</span>
`;

exports[`Text large-bold: span: brand 1`] = `
<span
  className="typography typography_size-large-bold typography_color-brand"
>
  large-bold: span: brand
</span>
`;

exports[`Text large-bold: span: brand-1 1`] = `
<span
  className="typography typography_size-large-bold typography_color-brand-1"
>
  large-bold: span: brand-1
</span>
`;

exports[`Text large-bold: span: disabled 1`] = `
<span
  className="typography typography_size-large-bold typography_color-disabled"
>
  large-bold: span: disabled
</span>
`;

exports[`Text large-bold: span: error 1`] = `
<span
  className="typography typography_size-large-bold typography_color-error"
>
  large-bold: span: error
</span>
`;

exports[`Text large-bold: span: headers 1`] = `
<span
  className="typography typography_size-large-bold typography_color-headers"
>
  large-bold: span: headers
</span>
`;

exports[`Text large-bold: span: inherit 1`] = `
<span
  className="typography typography_size-large-bold typography_color-inherit"
>
  large-bold: span: inherit
</span>
`;

exports[`Text large-bold: span: inverse 1`] = `
<span
  className="typography typography_size-large-bold typography_color-inverse"
>
  large-bold: span: inverse
</span>
`;

exports[`Text large-bold: span: link 1`] = `
<span
  className="typography typography_size-large-bold typography_color-link"
>
  large-bold: span: link
</span>
`;

exports[`Text large-bold: span: secondary 1`] = `
<span
  className="typography typography_size-large-bold typography_color-secondary"
>
  large-bold: span: secondary
</span>
`;

exports[`Text large-bold: span: success 1`] = `
<span
  className="typography typography_size-large-bold typography_color-success"
>
  large-bold: span: success
</span>
`;

exports[`Text large-bold: span: warning 1`] = `
<span
  className="typography typography_size-large-bold typography_color-warning"
>
  large-bold: span: warning
</span>
`;

exports[`Text large-bold: strong: basic 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-basic"
>
  large-bold: strong: basic
</strong>
`;

exports[`Text large-bold: strong: brand 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-brand"
>
  large-bold: strong: brand
</strong>
`;

exports[`Text large-bold: strong: brand-1 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-brand-1"
>
  large-bold: strong: brand-1
</strong>
`;

exports[`Text large-bold: strong: disabled 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-disabled"
>
  large-bold: strong: disabled
</strong>
`;

exports[`Text large-bold: strong: error 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-error"
>
  large-bold: strong: error
</strong>
`;

exports[`Text large-bold: strong: headers 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-headers"
>
  large-bold: strong: headers
</strong>
`;

exports[`Text large-bold: strong: inherit 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-inherit"
>
  large-bold: strong: inherit
</strong>
`;

exports[`Text large-bold: strong: inverse 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-inverse"
>
  large-bold: strong: inverse
</strong>
`;

exports[`Text large-bold: strong: link 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-link"
>
  large-bold: strong: link
</strong>
`;

exports[`Text large-bold: strong: secondary 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-secondary"
>
  large-bold: strong: secondary
</strong>
`;

exports[`Text large-bold: strong: success 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-success"
>
  large-bold: strong: success
</strong>
`;

exports[`Text large-bold: strong: warning 1`] = `
<strong
  className="typography typography_size-large-bold typography_color-warning"
>
  large-bold: strong: warning
</strong>
`;
